MDEV-38040 Fix uninitialised key_compare_result_on_equal

MDEV-34413 introduced a new overriding ha_partition::set_end_range,
which causes handler::set_end_range to not be called which would set
key_compare_result_on_equal, causing it to be uninitialized. In this
patch we recover the call to handler::set_end_range in
ha_partition::set_end_range.